k8s/weaviate-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weaviate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weaviate
  template:
    metadata:
      labels:
        app: weaviate
    spec:
      containers:
        - name: weaviate
          image: semitechnologies/weaviate:1.24.9
          ports:
            - containerPort: 8080
            - containerPort: 50051
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "700m"
              memory: "2Gi"
              ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: weaviate-service
spec:
  selector:
    app: weaviate
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: grpc
      protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
