k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: breadbot-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: breadbot-cert
    kubernetes.io/ingress.global-static-ip-name: breadbot-static-ip
spec:
  rules:
    - host: api.breadbot-ai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: breadbot-backend-service
                port:
                  number: 8000
